--- a/Resources/license.plist
+++ b/Resources/license.plist
@@ -2,21 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Expires</key>
-	<string>2007-12-12 12:00:01 -0000</string>
-	<key>Licenses</key>
-	<string>1</string>
-	<key>Name</key>
-	<string>Unregistered User</string>
 	<key>Product</key>
 	<string>Red Snapper</string>
-	<key>Signature</key>
-	<data>
-	WSSMFcs4naz9bTgsc2xFwDszU9WyqSPt8arNZ8q7z6r9cT16EwSpS7rb+FWQgJwAg1lP
-	U1KMWsiMyNIdyMRf3VUyTw7B8VjCcVVFFEOeXnZ344YXMP6v/7s9tkRl9OuMrTsTWpLK
-	5SPg1jRiUaszsZYYp50lTQHzNUKHarNTOtA=
-	</data>
 	<key>Version</key>
 	<string>1.3</string>
+	<key>Name</key>
+	<string>Test User</string>
+	<key>Email</key>
+	<string>test@tastyapps.com</string>
+	<key>Licenses</key>
+	<string>1</string>
+	<key>TransactionID</key>
+	<string>Not Valid</string>
+	<key>Signature</key>
+	<data>gCIfOQmu0dGAMexWK8LPMLQcH4veq9xonWKkidnp4/eFT9g+a/F4Y23o4zrrCFKrj3RFoRHgbEKA
+XrHoCbTeBDMexl+Czx4ajyHUD08RllkFQvNi4LQsCND5Gktov4hos47i8dTEXW1VWTt/WOmEH0Nn
+QqYhSs3XShct8Y/7hBc=
+</data>
 </dict>
 </plist>
